# whatsapp-clone-ui/src/app/services/core/models.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export type { BooleanResponse } from './models/boolean-response';
+export type { ChatCreationResponse } from './models/chat-creation-response';
 export type { ChatMessageResponse } from './models/chat-message-response';
 export type { ChatResponse } from './models/chat-response';
 export type { ChatUserResponse } from './models/chat-user-response';
