# whatsapp-clone-ui/src/app/services/core/models/chat-creation-response.ts
@@ -1,0 +1,20 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+
+/**
+ * Schema to hold the chat creation response
+ */
+export interface ChatCreationResponse {
+
+  /**
+   * The chat profile image reference
+   */
+  chatImageReference?: string;
+
+  /**
+   * The chat id
+   */
+  id?: string;
+}
